// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline > renders the component with posts 1`] = `
<div>
  <div
    class="space-y-5"
  >
    <h2
      class="text-xl font-semibold mb-5 text-gray-800 dark:text-gray-200"
    >
      投稿履歴
    </h2>
    <div>
      <div>
        <p
          class="mb-3 whitespace-pre-wrap text-gray-700 dark:text-gray-300 leading-relaxed"
        >
          Test Post 2
        </p>
        <div
          class="flex justify-between items-center text-sm text-gray-500 dark:text-gray-400 pt-2 border-t border-gray-100 dark:border-gray-700"
        >
          <span
            class="flex items-center"
          >
            <svg
              class="w-4 h-4 mr-1"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            2025/5/4 09:18
          </span>
        </div>
      </div>
      <div>
        <p
          class="mb-3 whitespace-pre-wrap text-gray-700 dark:text-gray-300 leading-relaxed"
        >
          Test Post 1
        </p>
        <div
          class="flex justify-between items-center text-sm text-gray-500 dark:text-gray-400 pt-2 border-t border-gray-100 dark:border-gray-700"
        >
          <span
            class="flex items-center"
          >
            <svg
              class="w-4 h-4 mr-1"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            2025/5/4 09:18
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline > renders the component without posts 1`] = `
<div>
  <div
    class="space-y-5"
  >
    <h2
      class="text-xl font-semibold mb-5 text-gray-800 dark:text-gray-200"
    >
      投稿履歴
    </h2>
    <div
      class="text-center py-12 px-6 bg-white dark:bg-gray-800 rounded-2xl shadow-md text-gray-500 dark:text-gray-400"
    >
      <svg
        class="w-12 h-12 mx-auto mb-4 text-gray-300 dark:text-gray-600"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <p
        class="text-lg"
      >
        まだ投稿がありません。
      </p>
      <p
        class="mt-2"
      >
        思いつくままに何か書いてみましょう。
      </p>
    </div>
  </div>
</div>
`;
